@@ -35,8 +35,6 @@ tab.settings.title.tracking,Tracking,Tracking,Verfolgung,Seguimiento,Suivi,Rastr
 tab.settings.wishlist.grade.rolls,Number of of rolls per grade,Number of of rolls per grade,Anzahl der Brötchen pro Klasse,Número de rollos por grado,Nombre de rouleaux par grade,Número de rolos por série,Количество попыток на одну гайку
 tab.settings.title.capi,Frontier API Integration,Frontier API Integration,Frontier API Integration,Integración de API Frontier,Intégration de l'API Frontier,Integração da API da Frontier,Интеграция с API Frontier
 tab.settings.capi.link.account,Link Frontier account,Link Frontier account,Link Frontier Konto,Cuenta de fronteras de enlace,Compte Frontier Link,Link Frontier Conta,Соединить с аккаунтом Frontier
-tab.settings.capi.connect,Connect,Connect,Verbinden,Conectar,Relier,Conectar,Соединить
-tab.settings.capi.disconnect,Disconnect,Disconnect,Trennen,Desconectar,Débrancher,desconectar,Отсоединить
 tab.settings.capi.connected,"Account connected, data refreshes every 5 minutes. Please be aware material totals can be wrong until data is refreshed.","Account connected, data refreshes every 5 minutes. Please be aware material totals can be wrong until data is refreshed.","Konto angeschlossen, Daten werden alle 5 Minuten aktualisiert. Bitte beachten Sie, dass Materialsummen falsch sein können, bis die Daten aktualisiert sind.","Cuenta conectada, los datos se actualizan cada 5 minutos. Tenga en cuenta que los totales del material pueden ser incorrectos hasta que se actualicen los datos.","Compte connecté, les données se rafraîchissent toutes les 5 minutes. Veuillez être conscient que les totaux des matériaux peuvent être erronés jusqu''à ce que les données soient actualisées.","Conta conectada, os dados atualizam a cada 5 minutos. Esteja ciente dos totais de materiais podem estar errados até que os dados sejam atualizados.","Аккаунт подключен, данные обновляются каждые 5 минут. Пожалуйста, имейте в виду, что количество материалов может быть неверным, пока данные не будут обновлены."
 tab.settings.capi.needs.registration,Please register the application to handle edomh:// links under the General settings,Please register the application to handle edomh:// links under the General settings,"Bitte registrieren Sie die Bewerbung, um edomh:// Links unter den allgemeinen Einstellungen zu verarbeiten",Registre la aplicación para manejar edomh:// enlaces en la configuración general,Veuillez enregistrer la demande pour gérer les liens edomh:// sous les paramètres généraux,Registre o aplicativo para lidar com o edomh:// Links nas configurações gerais,"Пожалуйста, зарегистрируйте приложение для обработки edomh:// ссылок в общих настройках"
 tab.settings.title.ar,Augmented Reality,Augmented Reality,erweiterte Realität,Realidad aumentada,Réalité augmentée,Realidade aumentada,Дополненная реальность (оверлей)
@@ -62,7 +60,6 @@ tab.settings.ar.bartender.toggle,Bartender overlay,Bartender overlay,Barkeeper O
 tab.settings.ar.color.bartender,Bartender color,Bartender color,Barkeeper Farbe,Color de camarero,Couleur barman,Cor do barman,Цвет оверлея Бармена
 tab.settings.ar.bartender.toggle,Bartender overlay,Bartender overlay,Barkeeper Overlay,Superposición de barman,Superposition du barman,Sobreposição de barman,Бартендентный наложение
 tab.settings.ar.color.bartender,Bartender color,Bartender color,Barkeeper Farbe,Color de camarero,Couleur barman,Cor do barman,Бармен Цвет
-tab.settings.capi.explain,Retrieves API data like fleetcarrier stock and orders on a 5 minute interval,Retrieves API data like fleetcarrier stock and orders on a 5 minute interval,Ruft API Daten wie FleetCarrier Aktien und Bestellungen in einem Intervall von 5 Minuten ab,Recupera datos de API como stock de flotante y pedidos en un intervalo de 5 minutos,Récupère les données de l''API comme le stock et les commandes de FleetCarrier sur un intervalle de 5 minutes,Recupera dados da API como estoque de FleetCarrier e pedidos em um intervalo de 5 minutos,"Получает данные API, такие как запасы FleetCarrier и заказы в 5 -минутном интервале"
 ar.overlay.wishlist,Wishlist,Wishlist,Wunschzettel,Lista de deseos,Liste de souhaits,Lista de Desejos,Список желаемого
 ar.overlay.irrelevant,Irrelevant,Irrelevant,Irrelevant,Irrelevante,Hors du sujet,Irrelevante,Ненужный
 ar.overlay.blueprint,Engineer/Blueprint,Engineer/Blueprint,Ingenieur/Blaupause,Ingeniero/plan,Ingénieur/plan,Engenheiro/Blueprint,Инженер/чертеж
@@ -77,3 +74,6 @@ tab.settings.flip.remaining.available.odyssey,Show remaining,Show remaining,,,,,
 tab.settings.flip.remaining.available.odyssey.explain,Enabling this will show remaining values instead of available values for the required materials,Enabling this will show remaining values instead of available values for the required materials,,,,,
 tab.settings.blueprint.expanded,Tooltip blueprint expanded,,,,,,
 tab.settings.blueprint.expanded.explain,Whether or not blueprints panels are expanded or collapsed in material tooltips,,,,,,
+tab.settings.capi.explain,Retrieves API data like fleetcarrier stock and orders on a 5 minute interval. Make sure you login with the same commander.,Retrieves API data like fleetcarrier stock and orders on a 5 minute interval. Make sure you login with the same commander.,Ruft API Daten wie FleetCarrier Aktien und Bestellungen in einem Intervall von 5 Minuten ab. Make sure you login with the same commander.,Recupera datos de API como stock de flotante y pedidos en un intervalo de 5 minutos. Make sure you login with the same commander.,Récupère les données de l''API comme le stock et les commandes de FleetCarrier sur un intervalle de 5 minutes. Make sure you login with the same commander.,Recupera dados da API como estoque de FleetCarrier e pedidos em um intervalo de 5 minutos. Make sure you login with the same commander.,"Получает данные API, такие как запасы FleetCarrier и заказы в 5 -минутном интервале. Make sure you login with the same commander."
+tab.settings.capi.connect,Connect CMDR {0},Connect CMDR {0},Verbinden CMDR {0},Conectar CMDR {0},Relier CMDR {0},Conectar CMDR {0},Соединить CMDR {0}
+tab.settings.capi.disconnect,Disconnect CMDR {0},Disconnect CMDR {0},Trennen CMDR {0},Desconectar CMDR {0},Débrancher CMDR {0},desconectar CMDR {0},Отсоединить CMDR {0}
