@@ -3,6 +3,7 @@ Version 2.28
 Added setting to expand blueprints in tooltips by default
 Removed white arrow from tooltips and made border more pronounced
 Align style of loadout tooltip with material tooltip
+Add clarifications to Frontier API settings
 
 Version 2.27
 -------------
